修复国际化相关问题

--- a/webview-ui/src/locales/ar/translation.json
+++ b/webview-ui/src/locales/ar/translation.json
@@ -91,7 +91,7 @@
 		}
 	},
 	"autoApprove": {
-		"title": "الموافقة التلقائية:",
+		"title": "الموافقة التلقائية",
 		"none": "لا شيء",
 		"description": "تسمح الموافقة التلقائية لـ Codai بتنفيذ الإجراءات التالية دون إذن. استخدمها بحذر وقم بتمكينها فقط إذا كنت تفهم المخاطر.",
 		"maxRequests": "الحد الأقصى لعدد الطلبات:",
@@ -138,6 +138,16 @@
 				"label": "استخدام خادم MCP",
 				"shortName": "MCP",
 				"description": "يسمح لـ Codai باستخدام خوادم MCP المكونة التي يمكنها تعديل نظام الملفات أو التفاعل مع API."
+			},
+			"enableAll": {
+				"label": "تفعيل الكل",
+				"shortName": "الكل",
+				"description": "تفعيل جميع الإجراءات."
+			},
+			"enableNotifications": {
+				"label": "تفعيل الإشعارات",
+				"shortName": "إشعارات",
+				"description": "تلقي إشعارات النظام عندما يحتاج Codai إلى موافقة للمتابعة أو عند اكتمال المهمة."
 			}
 		}
 	},
