--- a/webview-ui/src/locales/ru/translation.json
+++ b/webview-ui/src/locales/ru/translation.json
@@ -91,7 +91,7 @@
 		}
 	},
 	"autoApprove": {
-		"title": "Автоматическое одобрение:",
+		"title": "Автоматическое одобрение",
 		"none": "Нет",
 		"description": "Автоматическое одобрение позволяет Codai выполнять следующие действия без запроса разрешения. Пожалуйста, используйте с осторожностью и включайте только если понимаете риски.",
 		"maxRequests": "Максимум запросов:",
@@ -138,6 +138,16 @@
 				"label": "Использование MCP серверов",
 				"shortName": "MCP",
 				"description": "Позволяет Codai использовать настроенные MCP серверы, которые могут изменять файловую систему или взаимодействовать с API."
+			},
+			"enableAll": {
+				"label": "Включить все",
+				"shortName": "Все",
+				"description": "Включить все действия."
+			},
+			"enableNotifications": {
+				"label": "Включить уведомления",
+				"shortName": "Уведомления",
+				"description": "Получать системные уведомления, когда Codai требует одобрения для продолжения или когда задача завершена."
 			}
 		}
 	},
