修复国际化

--- a/webview-ui/src/locales/en/translation.json
+++ b/webview-ui/src/locales/en/translation.json
@@ -105,7 +105,38 @@
 			"reasoningEffort": "Modify reasoning effort",
 			"low": "low",
 			"high": "high",
-			"complexPrompts": "Codai uses complex prompts and works best with Claude or deepseek-v3 models. Less capable models may not work as expected."
+			"complexPrompts": "Codai uses complex prompts and works best with Claude or deepseek-v3 models. Less capable models may not work as expected.",
+			"customHeaders": "Custom Headers",
+			"addHeader": "Add Header",
+			"headerName": "Header name",
+			"headerValue": "Header value",
+			"remove": "Remove",
+			"modelConfiguration": "Model Configuration",
+			"supportsBrowserUse": "Supports browser use",
+			"inputPricePerMillion": "Input Price / 1M tokens",
+			"outputPricePerMillion": "Output Price / 1M tokens",
+			"enterApiKey": "Enter API Key...",
+			"enterBaseUrl": "Enter base URL...",
+			"enterModelId": "Enter Model ID...",
+			"getApiKey": "Get {{provider}} API Key",
+			"loading": "Loading...",
+			"balance": "Balance",
+			"keyStoredLocally": "This key is stored locally and only used to make API requests from this extension.",
+			"defaultBehaviorDesc": "Default behavior is to load balance requests across providers (like AWS, Google Vertex, Anthropic), prioritizing price while considering provider uptime",
+			"priceProviderDesc": "Sort providers by price, prioritizing the lowest cost provider",
+			"throughputProviderDesc": "Sort providers by throughput, prioritizing the provider with the highest throughput (may increase cost)",
+			"latencyProviderDesc": "Sort providers by response time, prioritizing the provider with the lowest latency",
+			"oauthCredentialsPath": "OAuth Credentials Path (optional)",
+			"oauthPathPlaceholder": "Default: ~/.gemini/oauth_creds.json",
+			"oauthPathDesc": "Path to the OAuth credentials file. Leave empty to use the default location (~/.gemini/oauth_creds.json).",
+			"discoveredProjectId": "Discovered Project ID",
+			"projectIdAutoDesc": "This project ID was automatically discovered from your OAuth credentials.",
+			"geminiCliDesc": "This provider uses OAuth authentication from the Gemini CLI tool and does not require API keys. If you haven't authenticated yet, please run",
+			"geminiCliSetup": "Gemini CLI Setup Instructions",
+			"importantRequirements": "Important Requirements",
+			"geminiCliRequirements": "• First, you need to install the **Gemini CLI tool**\n• Then, run **gemini** in your terminal and make sure you **Log in with Google**\n• Only works with **personal Google accounts** (not Google Workspace accounts)\n• Does not use API keys - authentication is handled via OAuth\n• Requires the Gemini CLI tool to be installed and authenticated first",
+			"freeTierAccess": "✓ Free tier access via OAuth authentication",
+			"complexPromptsNote": "Note: codai uses complex prompts and works best with Claude models. Less capable models may not work as expected."
 		}
 	},
 	"chat": {
