--- a/webview-ui/src/locales/zh-CN/translation.json
+++ b/webview-ui/src/locales/zh-CN/translation.json
@@ -105,7 +105,38 @@
 			"reasoningEffort": "修改推理力度",
 			"low": "低",
 			"high": "高",
-			"complexPrompts": "Codai使用的是复杂提示词，Claude或deepseek-v3模型最适合。性能较差的模型可能无法按预期工作。"
+			"complexPrompts": "Codai使用的是复杂提示词，Claude或deepseek-v3模型最适合。性能较差的模型可能无法按预期工作。",
+			"customHeaders": "自定义请求头",
+			"addHeader": "添加请求头",
+			"headerName": "请求头名称",
+			"headerValue": "请求头值",
+			"remove": "删除",
+			"modelConfiguration": "模型配置",
+			"supportsBrowserUse": "支持浏览器使用",
+			"inputPricePerMillion": "输入价格 / 100万tokens",
+			"outputPricePerMillion": "输出价格 / 100万tokens",
+			"enterApiKey": "输入API密钥...",
+			"enterBaseUrl": "输入服务器URL...",
+			"enterModelId": "输入模型ID...",
+			"getApiKey": "获取{{provider}} API密钥",
+			"loading": "加载中...",
+			"balance": "余额",
+			"keyStoredLocally": "此密钥存储在本地，仅用于从此扩展发起API请求。",
+			"defaultBehaviorDesc": "默认行为是在提供商（如AWS、Google Vertex、Anthropic）之间负载均衡请求，在考虑提供商正常运行时间的同时优先考虑价格",
+			"priceProviderDesc": "按价格排序提供商，优先使用成本最低的提供商",
+			"throughputProviderDesc": "按吞吐量排序提供商，优先使用吞吐量最高的提供商（可能增加成本）",
+			"latencyProviderDesc": "按响应时间排序提供商，优先使用延迟最低的提供商",
+			"oauthCredentialsPath": "OAuth凭证路径（可选）",
+			"oauthPathPlaceholder": "默认: ~/.gemini/oauth_creds.json",
+			"oauthPathDesc": "OAuth凭证文件的路径。留空将使用默认位置（~/.gemini/oauth_creds.json）。",
+			"discoveredProjectId": "发现的项目ID",
+			"projectIdAutoDesc": "此项目ID是从您的OAuth凭证中自动发现的。",
+			"geminiCliDesc": "此提供商使用Gemini CLI工具的OAuth身份验证，不需要API密钥。如果您尚未进行身份验证，请先在终端中运行",
+			"geminiCliSetup": "Gemini CLI设置说明",
+			"importantRequirements": "重要要求",
+			"geminiCliRequirements": "• 首先，您需要安装**Gemini CLI工具**\n• 然后，在终端中运行**gemini**并确保您**使用Google登录**\n• 仅适用于**个人Google账户**（不适用于Google Workspace账户）\n• 不使用API密钥 - 通过OAuth处理身份验证\n• 需要先安装并验证Gemini CLI工具",
+			"freeTierAccess": "✓ 通过OAuth身份验证的免费层访问",
+			"complexPromptsNote": "注意：codai使用复杂的提示词，最适合Claude模型。性能较差的模型可能无法按预期工作。"
 		}
 	},
 	"chat": {
